src/snapshots/foxglove__lexer__test__lex_block_with_block.snap
---
source: src/lexer.rs
description: "{ 1; { 2; 3; } }"
expression: tokens
---
Some(
    [
        (
            Control(
                OpenCurlyBrace,
            ),
            0..1,
        ),
        (
            Int(
                "1",
            ),
            2..3,
        ),
        (
            Control(
                Semicolon,
            ),
            3..4,
        ),
        (
            Control(
                OpenCurlyBrace,
            ),
            5..6,
        ),
        (
            Int(
                "2",
            ),
            7..8,
        ),
        (
            Control(
                Semicolon,
            ),
            8..9,
        ),
        (
            Int(
                "3",
            ),
            10..11,
        ),
        (
            Control(
                Semicolon,
            ),
            11..12,
        ),
        (
            Control(
                CloseCurlyBrace,
            ),
            13..14,
        ),
        (
            Control(
                CloseCurlyBrace,
            ),
            15..16,
        ),
    ],
)
