src/snapshots/foxglove__lexer__test__lex_block_with_block_with_list.snap
---
source: src/lexer.rs
description: "{ 1; { 2; [3, 4]; } }"
expression: tokens
---
Some(
    [
        (
            Control(
                OpenCurlyBrace,
            ),
            0..1,
        ),
        (
            Int(
                "1",
            ),
            2..3,
        ),
        (
            Control(
                Semicolon,
            ),
            3..4,
        ),
        (
            Control(
                OpenCurlyBrace,
            ),
            5..6,
        ),
        (
            Int(
                "2",
            ),
            7..8,
        ),
        (
            Control(
                Semicolon,
            ),
            8..9,
        ),
        (
            Control(
                OpenSquareBracket,
            ),
            10..11,
        ),
        (
            Int(
                "3",
            ),
            11..12,
        ),
        (
            Control(
                Comma,
            ),
            12..13,
        ),
        (
            Int(
                "4",
            ),
            14..15,
        ),
        (
            Control(
                CloseSquareBracket,
            ),
            15..16,
        ),
        (
            Control(
                Semicolon,
            ),
            16..17,
        ),
        (
            Control(
                CloseCurlyBrace,
            ),
            18..19,
        ),
        (
            Control(
                CloseCurlyBrace,
            ),
            20..21,
        ),
    ],
)
