src/snapshots/foxglove__lexer__test__lex_block_with_list.snap
---
source: src/lexer.rs
description: "{ 1; [2, 3]; }"
expression: tokens
---
Some(
    [
        (
            Control(
                OpenCurlyBrace,
            ),
            0..1,
        ),
        (
            Int(
                "1",
            ),
            2..3,
        ),
        (
            Control(
                Semicolon,
            ),
            3..4,
        ),
        (
            Control(
                OpenSquareBracket,
            ),
            5..6,
        ),
        (
            Int(
                "2",
            ),
            6..7,
        ),
        (
            Control(
                Comma,
            ),
            7..8,
        ),
        (
            Int(
                "3",
            ),
            9..10,
        ),
        (
            Control(
                CloseSquareBracket,
            ),
            10..11,
        ),
        (
            Control(
                Semicolon,
            ),
            11..12,
        ),
        (
            Control(
                CloseCurlyBrace,
            ),
            13..14,
        ),
    ],
)
