src/snapshots/foxglove__lexer__test__lex_bool.snap
---
source: src/lexer.rs
description: true false
expression: tokens
---
Some(
    [
        (
            Bool(
                true,
            ),
            0..4,
        ),
        (
            Bool(
                false,
            ),
            5..10,
        ),
    ],
)
