src/snapshots/foxglove__lexer__test__lex_colon.snap
---
source: src/lexer.rs
description: ":"
expression: tokens
---
Some(
    [
        (
            Control(
                Colon,
            ),
            0..1,
        ),
    ],
)
