src/snapshots/foxglove__lexer__test__lex_empty_block.snap
---
source: src/lexer.rs
description: "{}"
expression: tokens
---
Some(
    [
        (
            Control(
                OpenCurlyBrace,
            ),
            0..1,
        ),
        (
            Control(
                CloseCurlyBrace,
            ),
            1..2,
        ),
    ],
)
