src/snapshots/foxglove__lexer__test__lex_empty_list.snap
---
source: src/lexer.rs
description: "[]"
expression: tokens
---
Some(
    [
        (
            Control(
                OpenSquareBracket,
            ),
            0..1,
        ),
        (
            Control(
                CloseSquareBracket,
            ),
            1..2,
        ),
    ],
)
