src/snapshots/foxglove__lexer__test__lex_float.snap
---
source: src/lexer.rs
description: "123.456"
expression: tokens
---
Some(
    [
        (
            Float(
                "123.456",
            ),
            0..7,
        ),
    ],
)
